Commons (C) Black Rook Software, All rights reserved.

Slated for 2.17.0
=================

- Added: Common.parse*Array(...) methods for parsing arrays of primitives from
  strings.


Changed in 2.16.0
=================

- Added: Common.getURLsForFiles(File ... files).
- Added: Reflect.createForType(...) methods for type conversions.
- Changed: AbstractVector constructor with capacity did not obey the "if
  capacity <= 0, capacity is 1" policy.
- Changed: Source indentation style.
 

Changed in 2.15.0
=================

- Added: Common.close(...) methods for SQL-related objects.
- Added: com.blackrook.commons.TypeProfile, from Commons Lang.
- Added: Reflect.getFieldValue(Field, Object).

Changed in 2.14.2
=================

- Changed/Fixed: Common.getHTTP*() now supports HTTPS. It didn't before.
- Changed: Some documentation cleanup.

Changed in 2.14.1
=================

- Changed/Fixed: Some documentation cleanup.

Changed in 2.14.0
=================

- Added: Reflect.isArray(Object).
- Added: Reflect.getPublicFields(Object).
- Fixed: Reflect.toAutoboxedType(Class) for promotion of autoboxed types. 
- Fixed: Reflect.isSetter(Method) called isGetterName(), not isSetterName(). 
- Fixed: Reflect.isSetter(Method) and Reflect.isGetter(Method) checks for
  both Void.class and Void.TYPE as return types, like it should have.
- Added: Common.relay(InputStream, OutputStream, int) for variable buffer
  size per call.
- Added: Common.relay(InputStream, OutputStream, int, int) for max length.

Changed in 2.13.3
=================

- Fixed: DataList's delete(int, int) method sometimes didn't work.

Changed in 2.13.2
=================

- Added: Common.indexOf(T, T[]) for searching arrays sequentially.

Changed in 2.13.1
=================

- Added: Common.getTextualContents(File).
- Added: Common.close(ZipFile).
- Added: Support in Common.isEmpty(Object) for arrays.

Changed in 2.13.0
=================

- Changed: Applied copyright clause to some files that didn't have it.