@@ -5,6 +5,8 @@ Slated for 2.17.0
 
 - Added: Common.parse*Array(...) methods for parsing arrays of primitives from
   strings.
+- Added: Common.printBuffer(...) debug methods for printing the contents of 
+  buffers, both direct and in-Java.
 
 
 Changed in 2.16.0
